test/tests/errors/error-file-put-nothing-in-buffer2.sm
// true
// false
/**/
/**/

program{
    file f withbuffer bf;
    bf = 1;
    put f;
    put f;
}